[gd_scene load_steps=11 format=2]

[ext_resource path="res://Map/Buildings/Tower/Material_002.material" type="Material" id=1]
[ext_resource path="res://Map/Buildings/Tower/Tower.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=10]
resource_name = "Tower_Cone"
surfaces/0 = {
"aabb": AABB( -5, -1.5, -5, 10, 23.1787, 10 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 192, 191, 0, 0, 160, 192, 195, 113, 156, 63, 0, 0, 0, 56, 0, 0, 0, 0, 0, 0, 192, 191, 0, 0, 160, 192, 0, 129, 127, 193, 0, 58, 20, 56, 0, 0, 0, 0, 0, 0, 192, 191, 0, 0, 160, 192, 61, 113, 129, 50, 0, 60, 0, 56, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 128, 191, 195, 113, 156, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 128, 191, 0, 126, 126, 63, 0, 52, 20, 56, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 128, 191, 61, 113, 130, 76, 0, 60, 0, 0, 0, 0, 32, 64, 0, 0, 192, 191, 102, 144, 138, 192, 0, 129, 127, 193, 245, 58, 86, 56, 0, 0, 32, 64, 0, 0, 192, 191, 102, 144, 138, 192, 61, 113, 129, 50, 85, 59, 0, 56, 0, 0, 32, 64, 0, 0, 192, 191, 102, 144, 138, 192, 66, 93, 129, 95, 85, 59, 0, 56, 0, 0, 0, 63, 0, 0, 192, 63, 215, 179, 93, 191, 0, 126, 126, 63, 235, 53, 86, 56, 0, 0, 0, 63, 0, 0, 192, 63, 215, 179, 93, 191, 61, 113, 130, 76, 85, 59, 0, 0, 0, 0, 0, 63, 0, 0, 192, 63, 215, 179, 93, 191, 66, 93, 129, 95, 85, 59, 0, 0, 103, 144, 138, 64, 0, 0, 192, 191, 255, 255, 31, 192, 0, 129, 126, 193, 169, 59, 10, 57, 103, 144, 138, 64, 0, 0, 192, 191, 255, 255, 31, 192, 66, 93, 129, 95, 170, 58, 0, 56, 103, 144, 138, 64, 0, 0, 192, 191, 255, 255, 31, 192, 61, 78, 129, 113, 170, 58, 0, 56, 216, 179, 93, 63, 0, 0, 192, 63, 255, 255, 255, 190, 0, 126, 126, 63, 83, 55, 10, 57, 216, 179, 93, 63, 0, 0, 192, 63, 255, 255, 255, 190, 66, 93, 129, 95, 170, 58, 0, 0, 216, 179, 93, 63, 0, 0, 192, 63, 255, 255, 255, 190, 61, 78, 129, 113, 170, 58, 0, 0, 0, 0, 160, 64, 0, 0, 192, 191, 122, 172, 106, 52, 0, 129, 127, 193, 235, 59, 0, 58, 0, 0, 160, 64, 0, 0, 192, 191, 122, 172, 106, 52, 61, 78, 129, 113, 0, 58, 0, 56, 0, 0, 160, 64, 0, 0, 192, 191, 122, 172, 106, 52, 48, 65, 126, 13, 0, 58, 0, 56, 0, 0, 128, 63, 0, 0, 192, 63, 46, 189, 59, 51, 0, 126, 126, 63, 215, 55, 0, 58, 0, 0, 128, 63, 0, 0, 192, 63, 46, 189, 59, 51, 61, 78, 129, 113, 0, 58, 0, 0, 0, 0, 128, 63, 0, 0, 192, 63, 46, 189, 59, 51, 48, 65, 127, 113, 0, 58, 0, 0, 102, 144, 138, 64, 0, 0, 192, 191, 1, 0, 32, 64, 0, 129, 126, 193, 169, 59, 245, 58, 102, 144, 138, 64, 0, 0, 192, 191, 1, 0, 32, 64, 33, 60, 127, 95, 85, 57, 0, 56, 102, 144, 138, 64, 0, 0, 192, 191, 1, 0, 32, 64, 48, 65, 126, 13, 85, 57, 0, 56, 215, 179, 93, 63, 0, 0, 192, 63, 1, 0, 0, 63, 0, 126, 126, 63, 83, 55, 245, 58, 215, 179, 93, 63, 0, 0, 192, 63, 1, 0, 0, 63, 33, 60, 127, 95, 85, 57, 0, 0, 215, 179, 93, 63, 0, 0, 192, 63, 1, 0, 0, 63, 48, 65, 127, 113, 85, 57, 0, 0, 1, 0, 32, 64, 0, 0, 192, 191, 102, 144, 138, 64, 0, 129, 127, 193, 245, 58, 169, 59, 1, 0, 32, 64, 0, 0, 192, 191, 102, 144, 138, 64, 13, 65, 127, 76, 170, 56, 0, 56, 1, 0, 32, 64, 0, 0, 192, 191, 102, 144, 138, 64, 33, 60, 127, 95, 170, 56, 0, 56, 1, 0, 0, 63, 0, 0, 192, 63, 215, 179, 93, 63, 0, 126, 126, 63, 235, 53, 169, 59, 1, 0, 0, 63, 0, 0, 192, 63, 215, 179, 93, 63, 13, 65, 127, 50, 170, 56, 0, 0, 1, 0, 0, 63, 0, 0, 192, 63, 215, 179, 93, 63, 33, 60, 127, 95, 170, 56, 0, 0, 122, 172, 234, 180, 0, 0, 192, 191, 0, 0, 160, 64, 243, 65, 100, 63, 0, 56, 0, 56, 122, 172, 234, 180, 0, 0, 192, 191, 0, 0, 160, 64, 0, 129, 127, 193, 0, 58, 235, 59, 122, 172, 234, 180, 0, 0, 192, 191, 0, 0, 160, 64, 13, 65, 127, 76, 0, 56, 0, 56, 46, 189, 187, 179, 0, 0, 192, 63, 0, 0, 128, 63, 243, 65, 100, 63, 0, 56, 0, 0, 46, 189, 187, 179, 0, 0, 192, 63, 0, 0, 128, 63, 0, 126, 126, 63, 255, 51, 235, 59, 46, 189, 187, 179, 0, 0, 192, 63, 0, 0, 128, 63, 13, 65, 127, 50, 0, 56, 0, 0, 255, 255, 31, 192, 0, 0, 192, 191, 102, 144, 138, 64, 223, 60, 63, 63, 170, 54, 0, 56, 255, 255, 31, 192, 0, 0, 192, 191, 102, 144, 138, 64, 243, 65, 100, 63, 170, 54, 0, 56, 255, 255, 31, 192, 0, 0, 192, 191, 102, 144, 138, 64, 0, 129, 126, 193, 10, 57, 169, 59, 255, 255, 255, 190, 0, 0, 192, 63, 215, 179, 93, 63, 223, 60, 63, 63, 170, 54, 0, 0, 255, 255, 255, 190, 0, 0, 192, 63, 215, 179, 93, 63, 243, 65, 100, 63, 170, 54, 0, 0, 255, 255, 255, 190, 0, 0, 192, 63, 215, 179, 93, 63, 0, 126, 126, 63, 40, 48, 169, 59, 103, 144, 138, 192, 0, 0, 192, 191, 254, 255, 31, 64, 208, 65, 26, 63, 85, 53, 0, 56, 103, 144, 138, 192, 0, 0, 192, 191, 254, 255, 31, 64, 223, 60, 63, 63, 85, 53, 0, 56, 103, 144, 138, 192, 0, 0, 192, 191, 254, 255, 31, 64, 0, 129, 126, 193, 86, 56, 245, 58, 216, 179, 93, 191, 0, 0, 192, 63, 253, 255, 255, 62, 208, 65, 26, 63, 85, 53, 0, 0, 216, 179, 93, 191, 0, 0, 192, 63, 253, 255, 255, 62, 223, 60, 63, 63, 85, 53, 0, 0, 216, 179, 93, 191, 0, 0, 192, 63, 253, 255, 255, 62, 0, 126, 126, 63, 101, 41, 245, 58, 0, 0, 160, 192, 0, 0, 192, 191, 221, 10, 128, 179, 195, 78, 230, 63, 0, 52, 0, 56, 0, 0, 160, 192, 0, 0, 192, 191, 221, 10, 128, 179, 208, 65, 26, 63, 0, 52, 0, 56, 0, 0, 160, 192, 0, 0, 192, 191, 221, 10, 128, 179, 0, 129, 127, 193, 20, 56, 0, 58, 0, 0, 128, 191, 0, 0, 192, 63, 46, 222, 76, 178, 195, 78, 230, 63, 0, 52, 0, 0, 0, 0, 128, 191, 0, 0, 192, 63, 46, 222, 76, 178, 208, 65, 26, 63, 0, 52, 0, 0, 0, 0, 128, 191, 0, 0, 192, 63, 46, 222, 76, 178, 0, 126, 126, 63, 30, 33, 0, 58, 103, 144, 138, 192, 0, 0, 192, 191, 254, 255, 31, 192, 195, 78, 230, 63, 85, 49, 0, 56, 103, 144, 138, 192, 0, 0, 192, 191, 254, 255, 31, 192, 190, 93, 193, 63, 85, 49, 0, 56, 103, 144, 138, 192, 0, 0, 192, 191, 254, 255, 31, 192, 0, 129, 127, 193, 86, 56, 10, 57, 216, 179, 93, 191, 0, 0, 192, 63, 253, 255, 255, 190, 195, 78, 230, 63, 85, 49, 0, 0, 216, 179, 93, 191, 0, 0, 192, 63, 253, 255, 255, 190, 190, 93, 193, 63, 85, 49, 0, 0, 216, 179, 93, 191, 0, 0, 192, 63, 253, 255, 255, 190, 0, 126, 126, 63, 101, 41, 10, 57, 4, 0, 32, 192, 0, 0, 192, 191, 102, 144, 138, 192, 190, 93, 193, 63, 85, 45, 0, 56, 4, 0, 32, 192, 0, 0, 192, 191, 102, 144, 138, 192, 195, 113, 156, 63, 85, 45, 0, 56, 4, 0, 32, 192, 0, 0, 192, 191, 102, 144, 138, 192, 0, 129, 127, 193, 10, 57, 86, 56, 3, 0, 0, 191, 0, 0, 192, 63, 214, 179, 93, 191, 190, 93, 193, 63, 85, 45, 0, 0, 3, 0, 0, 191, 0, 0, 192, 63, 214, 179, 93, 191, 195, 113, 156, 63, 85, 45, 0, 0, 3, 0, 0, 191, 0, 0, 192, 63, 214, 179, 93, 191, 0, 126, 126, 63, 40, 48, 86, 56, 0, 0, 0, 192, 3, 110, 173, 65, 13, 0, 0, 192, 129, 0, 0, 1, 0, 54, 0, 60, 0, 0, 0, 192, 3, 110, 173, 65, 13, 0, 0, 192, 126, 129, 0, 1, 0, 54, 0, 0, 0, 0, 0, 192, 3, 110, 173, 65, 13, 0, 0, 192, 0, 127, 127, 63, 0, 48, 0, 52, 0, 0, 0, 192, 3, 110, 141, 65, 11, 0, 0, 192, 129, 0, 0, 1, 0, 57, 0, 60, 0, 0, 0, 192, 3, 110, 141, 65, 11, 0, 0, 192, 0, 129, 129, 63, 0, 59, 0, 52, 0, 0, 0, 192, 3, 110, 141, 65, 11, 0, 0, 192, 126, 129, 0, 1, 0, 57, 0, 0, 0, 0, 0, 192, 3, 110, 173, 65, 228, 255, 255, 63, 129, 0, 0, 1, 0, 54, 0, 58, 0, 0, 0, 192, 3, 110, 173, 65, 228, 255, 255, 63, 0, 0, 0, 1, 0, 54, 0, 58, 0, 0, 0, 192, 3, 110, 173, 65, 228, 255, 255, 63, 0, 127, 127, 63, 0, 48, 0, 56, 0, 0, 0, 192, 3, 110, 141, 65, 233, 255, 255, 63, 129, 0, 0, 1, 0, 57, 0, 58, 0, 0, 0, 192, 3, 110, 141, 65, 233, 255, 255, 63, 0, 129, 129, 63, 0, 59, 0, 56, 0, 0, 0, 192, 3, 110, 141, 65, 233, 255, 255, 63, 0, 0, 0, 1, 0, 57, 0, 58, 0, 0, 0, 64, 3, 110, 173, 65, 13, 0, 0, 192, 126, 129, 0, 1, 0, 54, 0, 52, 0, 0, 0, 64, 3, 110, 173, 65, 13, 0, 0, 192, 0, 127, 127, 63, 0, 54, 0, 52, 0, 0, 0, 64, 3, 110, 173, 65, 13, 0, 0, 192, 127, 0, 0, 1, 0, 54, 0, 52, 0, 0, 0, 64, 3, 110, 141, 65, 11, 0, 0, 192, 0, 129, 129, 63, 0, 57, 0, 52, 0, 0, 0, 64, 3, 110, 141, 65, 11, 0, 0, 192, 126, 129, 0, 1, 0, 57, 0, 52, 0, 0, 0, 64, 3, 110, 141, 65, 11, 0, 0, 192, 127, 0, 0, 1, 0, 57, 0, 52, 0, 0, 0, 64, 3, 110, 173, 65, 228, 255, 255, 63, 0, 0, 0, 1, 0, 54, 0, 56, 0, 0, 0, 64, 3, 110, 173, 65, 228, 255, 255, 63, 0, 127, 127, 63, 0, 54, 0, 56, 0, 0, 0, 64, 3, 110, 173, 65, 228, 255, 255, 63, 127, 0, 0, 1, 0, 54, 0, 56, 0, 0, 0, 64, 3, 110, 141, 65, 233, 255, 255, 63, 0, 129, 129, 63, 0, 57, 0, 56, 0, 0, 0, 64, 3, 110, 141, 65, 233, 255, 255, 63, 0, 0, 0, 1, 0, 57, 0, 56, 0, 0, 0, 64, 3, 110, 141, 65, 233, 255, 255, 63, 127, 0, 0, 1, 0, 57, 0, 56, 0, 0, 0, 0, 240, 41, 157, 65, 231, 255, 255, 63, 211, 253, 129, 86, 0, 0, 0, 56, 0, 0, 0, 0, 240, 41, 157, 65, 231, 255, 255, 63, 0, 127, 127, 193, 0, 58, 20, 56, 0, 0, 0, 0, 240, 41, 157, 65, 231, 255, 255, 63, 45, 253, 176, 63, 0, 60, 0, 56, 136, 136, 136, 178, 32, 132, 181, 190, 155, 153, 153, 63, 211, 253, 129, 40, 0, 0, 0, 0, 136, 136, 136, 178, 32, 132, 181, 190, 155, 153, 153, 63, 0, 129, 127, 63, 0, 52, 20, 56, 136, 136, 136, 178, 32, 132, 181, 190, 155, 153, 153, 63, 45, 253, 176, 63, 0, 60, 0, 0, 216, 179, 221, 63, 240, 41, 157, 65, 206, 255, 127, 63, 0, 127, 127, 193, 169, 59, 10, 57, 216, 179, 221, 63, 240, 41, 157, 65, 206, 255, 127, 63, 45, 253, 176, 63, 170, 58, 0, 56, 216, 179, 221, 63, 240, 41, 157, 65, 206, 255, 127, 63, 122, 252, 0, 63, 170, 58, 0, 56, 130, 5, 133, 63, 32, 132, 181, 190, 154, 153, 25, 63, 0, 129, 127, 63, 83, 55, 10, 57, 130, 5, 133, 63, 32, 132, 181, 190, 154, 153, 25, 63, 45, 253, 176, 63, 170, 58, 0, 0, 130, 5, 133, 63, 32, 132, 181, 190, 154, 153, 25, 63, 122, 252, 0, 63, 170, 58, 0, 0, 215, 179, 221, 63, 240, 41, 157, 65, 26, 0, 128, 191, 0, 127, 127, 193, 169, 59, 245, 58, 215, 179, 221, 63, 240, 41, 157, 65, 26, 0, 128, 191, 123, 175, 80, 63, 85, 57, 0, 56, 215, 179, 221, 63, 240, 41, 157, 65, 26, 0, 128, 191, 122, 252, 0, 63, 85, 57, 0, 56, 129, 5, 133, 63, 32, 132, 181, 190, 154, 153, 25, 191, 0, 129, 127, 63, 83, 55, 245, 58, 129, 5, 133, 63, 32, 132, 181, 190, 154, 153, 25, 191, 123, 175, 80, 63, 85, 57, 0, 0, 129, 5, 133, 63, 32, 132, 181, 190, 154, 153, 25, 191, 122, 252, 0, 63, 85, 57, 0, 0, 46, 189, 59, 180, 240, 41, 157, 65, 12, 0, 0, 192, 133, 175, 127, 40, 255, 55, 0, 56, 46, 189, 59, 180, 240, 41, 157, 65, 12, 0, 0, 192, 0, 127, 127, 193, 0, 58, 235, 59, 46, 189, 59, 180, 240, 41, 157, 65, 12, 0, 0, 192, 123, 175, 80, 63, 255, 55, 0, 56, 198, 181, 1, 180, 32, 132, 181, 190, 153, 153, 153, 191, 133, 175, 127, 40, 255, 55, 0, 0, 198, 181, 1, 180, 32, 132, 181, 190, 153, 153, 153, 191, 0, 129, 127, 63, 255, 51, 235, 59, 198, 181, 1, 180, 32, 132, 181, 190, 153, 153, 153, 191, 123, 175, 80, 63, 255, 55, 0, 0, 216, 179, 221, 191, 240, 41, 157, 65, 23, 0, 128, 191, 134, 252, 127, 127, 85, 53, 0, 56, 216, 179, 221, 191, 240, 41, 157, 65, 23, 0, 128, 191, 133, 175, 127, 40, 85, 53, 0, 56, 216, 179, 221, 191, 240, 41, 157, 65, 23, 0, 128, 191, 0, 127, 127, 193, 86, 56, 245, 58, 130, 5, 133, 191, 32, 132, 181, 190, 151, 153, 25, 191, 134, 252, 127, 127, 85, 53, 0, 0, 130, 5, 133, 191, 32, 132, 181, 190, 151, 153, 25, 191, 133, 175, 127, 40, 85, 53, 0, 0, 130, 5, 133, 191, 32, 132, 181, 190, 151, 153, 25, 191, 0, 129, 127, 63, 101, 41, 245, 58, 216, 179, 221, 191, 240, 41, 157, 65, 204, 255, 127, 63, 134, 252, 127, 127, 85, 49, 0, 56, 216, 179, 221, 191, 240, 41, 157, 65, 204, 255, 127, 63, 211, 253, 129, 86, 85, 49, 0, 56, 216, 179, 221, 191, 240, 41, 157, 65, 204, 255, 127, 63, 0, 127, 127, 193, 86, 56, 10, 57, 130, 5, 133, 191, 32, 132, 181, 190, 153, 153, 25, 63, 134, 252, 127, 127, 85, 49, 0, 0, 130, 5, 133, 191, 32, 132, 181, 190, 153, 153, 25, 63, 211, 253, 129, 40, 85, 49, 0, 0, 130, 5, 133, 191, 32, 132, 181, 190, 153, 153, 25, 63, 0, 129, 126, 63, 101, 41, 10, 57 ),
"array_index_data": PoolByteArray( 2, 0, 10, 0, 5, 0, 2, 0, 7, 0, 10, 0, 8, 0, 16, 0, 11, 0, 8, 0, 13, 0, 16, 0, 14, 0, 22, 0, 17, 0, 14, 0, 19, 0, 22, 0, 20, 0, 29, 0, 23, 0, 20, 0, 26, 0, 29, 0, 25, 0, 35, 0, 28, 0, 25, 0, 32, 0, 35, 0, 31, 0, 41, 0, 34, 0, 31, 0, 38, 0, 41, 0, 36, 0, 46, 0, 39, 0, 36, 0, 43, 0, 46, 0, 42, 0, 52, 0, 45, 0, 42, 0, 49, 0, 52, 0, 48, 0, 58, 0, 51, 0, 48, 0, 55, 0, 58, 0, 54, 0, 63, 0, 57, 0, 54, 0, 60, 0, 63, 0, 15, 0, 4, 0, 9, 0, 4, 0, 65, 0, 71, 0, 65, 0, 53, 0, 59, 0, 53, 0, 40, 0, 47, 0, 40, 0, 27, 0, 33, 0, 27, 0, 15, 0, 21, 0, 15, 0, 65, 0, 4, 0, 65, 0, 40, 0, 53, 0, 40, 0, 15, 0, 27, 0, 65, 0, 15, 0, 40, 0, 61, 0, 69, 0, 64, 0, 61, 0, 66, 0, 69, 0, 67, 0, 3, 0, 70, 0, 67, 0, 0, 0, 3, 0, 68, 0, 6, 0, 1, 0, 6, 0, 18, 0, 12, 0, 18, 0, 30, 0, 24, 0, 30, 0, 44, 0, 37, 0, 44, 0, 56, 0, 50, 0, 56, 0, 68, 0, 62, 0, 68, 0, 18, 0, 6, 0, 18, 0, 44, 0, 30, 0, 44, 0, 68, 0, 56, 0, 18, 0, 68, 0, 44, 0, 72, 0, 81, 0, 75, 0, 72, 0, 78, 0, 81, 0, 79, 0, 94, 0, 83, 0, 79, 0, 90, 0, 94, 0, 92, 0, 89, 0, 95, 0, 92, 0, 86, 0, 89, 0, 84, 0, 77, 0, 88, 0, 84, 0, 73, 0, 77, 0, 80, 0, 85, 0, 91, 0, 80, 0, 74, 0, 85, 0, 93, 0, 76, 0, 82, 0, 93, 0, 87, 0, 76, 0, 98, 0, 106, 0, 101, 0, 98, 0, 103, 0, 106, 0, 104, 0, 113, 0, 107, 0, 104, 0, 110, 0, 113, 0, 109, 0, 119, 0, 112, 0, 109, 0, 116, 0, 119, 0, 114, 0, 124, 0, 117, 0, 114, 0, 121, 0, 124, 0, 111, 0, 100, 0, 105, 0, 100, 0, 125, 0, 131, 0, 125, 0, 111, 0, 118, 0, 100, 0, 111, 0, 125, 0, 120, 0, 129, 0, 123, 0, 120, 0, 126, 0, 129, 0, 127, 0, 99, 0, 130, 0, 127, 0, 96, 0, 99, 0, 128, 0, 102, 0, 97, 0, 102, 0, 115, 0, 108, 0, 115, 0, 128, 0, 122, 0, 102, 0, 128, 0, 115, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 228,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 132
}

[sub_resource type="CylinderShape" id=11]
height = 20.0
radius = 3.0

[sub_resource type="CylinderShape" id=3]
height = 4.0
radius = 4.0

[sub_resource type="CylinderShape" id=4]
radius = 30.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=6]
material = SubResource( 7 )
radius = 0.25
height = 0.5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.027451, 0.356863, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.717647, 0.0313726, 0.0313726, 1 )

[node name="Tower" type="StaticBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 19.6787, 0 )
mesh = SubResource( 10 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0334206, 9.08415, 0.0584853 )
shape = SubResource( 11 )

[node name="BuildArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="BuildArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 3 )

[node name="AttackArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48319, 0 )

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
shape = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Bullet" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20.6005, 0 )
mesh = SubResource( 6 )

[node name="AttackTween" type="Tween" parent="."]

[node name="HP" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27.1598, 0 )
cast_shadow = 0
billboard = 1

[node name="Viewport" type="Viewport" parent="HP"]
size = Vector2( 300, 50 )
handle_input_locally = false
usage = 0
render_target_v_flip = true

[node name="ProgressBar" type="ProgressBar" parent="HP/Viewport"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 50 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0
percent_visible = false

[connection signal="body_entered" from="BuildArea" to="." method="_buildAreaEntered"]
[connection signal="body_exited" from="BuildArea" to="." method="_buildAreaExited"]
[connection signal="body_entered" from="AttackArea" to="." method="_enemyInRange"]
[connection signal="body_exited" from="AttackArea" to="." method="_enemyOutOfRange"]
[connection signal="timeout" from="AttackTimer" to="." method="_onAttackTimer"]
[connection signal="tween_completed" from="AttackTween" to="." method="__dealDmg"]
